WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248457
[ANGLE] Fix Metal API deprecation warnings
https://bugs.webkit.org/show_bug.cgi?id=248457
Summary
[ANGLE] Fix Metal API deprecation warnings
Dan Glastonbury
Reported
2022-11-28 23:05:50 PST
macOS 13/iphoneOS 16.0 deprecated Metal APIs, causing warnings when building ANGLE. Fix warnings associated with using deprecated features by using preprocessor checks to not use those APIs when the targeted minimum version is the same as, or later than, macOS 13/iphoneOS 16.0
Attachments
Add attachment
proposed patch, testcase, etc.
Dan Glastonbury
Comment 1
2022-11-28 23:06:24 PST
Kimmo nerd sniped me into fixing these.
Radar WebKit Bug Importer
Comment 2
2022-11-28 23:06:38 PST
<
rdar://problem/102750943
>
Dan Glastonbury
Comment 3
2022-11-28 23:09:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6909
EWS
Comment 4
2022-11-30 10:22:57 PST
Committed
257184@main
(79b1ae56836e): <
https://commits.webkit.org/257184@main
> Reviewed commits have been landed. Closing PR #6909 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug