[ANGLE] Fix Metal API deprecation warnings https://bugs.webkit.org/show_bug.cgi?id=248457 rdar://102750943

Reviewed by Kimmo Kinnunen.

macOS 13/iphoneOS 16.0 deprecated Metal APIs, causing warnings when building
ANGLE. Fix warnings associated with using deprecated features by using
preprocessor checks to not use those APIs when the targeted minimum version is
the same as, or later than, macOS 13/iphoneOS 16.0

* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_command_buffer.mm:
* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_state_cache.mm:
* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_utils.mm:
(rx::mtl::SupportsMacGPUFamily):
(rx::mtl::ComputeTotalSizeUsedForMTLRenderPipelineDescriptor):

Canonical link: https://commits.webkit.org/257184@main